--- a/src/pages/portfolio/style.css
+++ b/src/pages/portfolio/style.css
@@ -96,3 +96,10 @@
 .po_item .content a:hover {
     text-decoration: none;
 }
+
+.portfolio-thumb {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  display: block;
+}
